Make footer visible on marketing pages, fixup for logo width when logged in

--- a/src/angular/planit/src/assets/sass/components/_header-primary.scss
+++ b/src/angular/planit/src/assets/sass/components/_header-primary.scss
@@ -29,6 +29,13 @@
     }
   }
 
+  .logo-mark {
+    > img {
+      width: 4.2rem;
+      height: 4.2rem;
+    }
+  }
+
   .nav-buttons {
     display: flex;
     flex-flow: row nowrap;
